[package]
name = "betterstack-appender"
version = "0.1.0"
edition = "2024"

[features]
default = ["gzip", "default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
gzip = [
    "async-compression",
    "async-compression/gzip",
    "async-compression/tokio",
    "tokio-util",
    "tokio-util/io",
]

[dependencies]
bytes = "1"
flume = "0.11"
futures = "0.3"
reqwest = { version = "0.12", features = [
    "http2",
    "json",
    "stream",
], default-features = false }
tokio = { version = "1", features = ["rt", "net", "time", "parking_lot"] }
tracing-subscriber = "0.3"
async-compression = { version = "0.4", default-features = false, optional = true }
tokio-util = { version = "0.7", default-features = false, optional = true }
